--- a/PlantLady/PlantLady.UWP/PlantLady.UWP.csproj
+++ b/PlantLady/PlantLady.UWP/PlantLady.UWP.csproj
@@ -144,9 +144,12 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.1558-pre3" />
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.10" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.0-pre2" />
+    <PackageReference Include="Xamarin.CommunityToolkit">
+      <Version>1.0.0-pre5</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.1709-pre4" />
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.11" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.6.0-pre4" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PlantLady\PlantLady.csproj">
