--- a/PlantLady/PlantLady.Android/PlantLady.Android.csproj
+++ b/PlantLady/PlantLady.Android/PlantLady.Android.csproj
@@ -54,8 +54,11 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.1558-pre3" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.0-pre2" />
+    <PackageReference Include="Xamarin.CommunityToolkit">
+      <Version>1.0.0-pre5</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.1709-pre4" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.6.0-pre4" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
