android builds no errors

--- a/PlantLady/PlantLady.Android/PlantLady.Android.csproj
+++ b/PlantLady/PlantLady.Android/PlantLady.Android.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
     <PropertyGroup>
 		<UseInterpreter Condition="$(TargetFramework.Contains('-android'))">True</UseInterpreter>
+		<SupportedOSPlatformVersion>28.0</SupportedOSPlatformVersion>
 	</PropertyGroup>
 
  <ItemGroup>
