--- a/PlantLady/PlantLady/PlantLady.csproj
+++ b/PlantLady/PlantLady/PlantLady.csproj
@@ -1,36 +1,29 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
+    <UseMaui>true</UseMaui>
+    <TargetFrameworks>net7.0-android;net7.0-ios</TargetFrameworks>
+    <OutputType>Library</OutputType>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DebugType>portable</DebugType>
-    <DebugSymbols>true</DebugSymbols>
-  </PropertyGroup>
-
   <ItemGroup>
     <None Remove="Resources\AmaticSC-Regular.ttf" />
     <None Remove="Resources\materialdesignicons-webfont.ttf" />
     <None Remove="Resources\Michella-Garden.otf" />
   </ItemGroup>
-
   <ItemGroup>
     <EmbeddedResource Include="Resources\AmaticSC-Regular.ttf" />
     <EmbeddedResource Include="Resources\materialdesignicons-webfont.ttf" />
     <EmbeddedResource Include="Resources\Michella-Garden.otf" />
   </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2083" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
-  </ItemGroup>
-
   <ItemGroup>
     <EmbeddedResource Update="Views\PlantsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.4.355802">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup />
 </Project>
