adds Xamarin UITESTs for migration

--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,9 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# test binaries folder
+Binaries/
+
+# mac file
+.DS_Store
