fixes UI stuff and adds UITest

--- a/PlantLady/PlantLady/PlantLady.csproj
+++ b/PlantLady/PlantLady/PlantLady.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0-ios;net6.0-android</TargetFrameworks>
+    <TargetFrameworks>net7.0-ios;net7.0-android</TargetFrameworks>
     <UseMaui>True</UseMaui>
 	  <OutputType>Library</OutputType>
 	  <ImplicitUsings>enable</ImplicitUsings>
@@ -9,11 +9,14 @@
 	  <!-- Required for C# Hot Reload -->
 	  <UseInterpreter Condition="'$(Configuration)' == 'Debug'">True</UseInterpreter>
 
-     <SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net6.0-ios'">15.4</SupportedOSPlatformVersion>
-	  <SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net6.0-android'">31.0</SupportedOSPlatformVersion>
+     <SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net7.0-ios'">15.4</SupportedOSPlatformVersion>
+	  <SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net7.0-android'">31.0</SupportedOSPlatformVersion>
 
   </PropertyGroup>
   
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-ios|AnyCPU'">
+    <CreatePackage>false</CreatePackage>
+  </PropertyGroup>
     <ItemGroup>
       <MauiFont Include="Resources\*" />
     </ItemGroup>
