--- a/PlantLady/PlantLady.Android/PlantLady.Android.csproj
+++ b/PlantLady/PlantLady.Android/PlantLady.Android.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <UseMaui>true</UseMaui>
-    <TargetFramework>net6.0-android</TargetFramework>
+    <TargetFramework>net7.0-android</TargetFramework>
     <OutputType>Exe</OutputType>
     	<ImplicitUsings>enable</ImplicitUsings>
-	  <SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net6.0-android'">31.0</SupportedOSPlatformVersion>
+	  <SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net7.0-android'">31.0</SupportedOSPlatformVersion>
   </PropertyGroup>
     <PropertyGroup>
 		<UseInterpreter Condition="$(TargetFramework.Contains('-android'))">True</UseInterpreter>
@@ -13,8 +13,6 @@
 
  <ItemGroup>
     <ProjectReference Include="..\PlantLady\PlantLady.csproj">
-      <Project>{EA278C7F-74CB-4DD9-9407-D2FB485A7932}</Project>
-      <Name>PlantLady</Name>
     </ProjectReference>
   </ItemGroup>
 
@@ -36,10 +34,7 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-</Project>
-
-
-<!-- <?xml version="1.0" encoding="utf-8"?>
+</Project><!-- <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
