--- a/PlantLady/PlantLady.iOS/PlantLady.iOS.csproj
+++ b/PlantLady/PlantLady.iOS/PlantLady.iOS.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <UseMaui>true</UseMaui>
-    <TargetFramework>net6.0-ios</TargetFramework>
+    <TargetFramework>net7.0-ios</TargetFramework>
     <OutputType>Exe</OutputType>
     	<ImplicitUsings>enable</ImplicitUsings>
 
@@ -11,18 +11,27 @@
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
     </ItemGroup>  -->
 
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-ios|AnyCPU'">
+    <CreatePackage>false</CreatePackage>
+  </PropertyGroup>
 <ItemGroup>
     <ProjectReference Include="..\PlantLady\PlantLady.csproj">
-      <Project>{EA278C7F-74CB-4DD9-9407-D2FB485A7932}</Project>
-      <Name>PlantLady</Name>
     </ProjectReference>
   </ItemGroup>
  
 
-  </Project>
-
-
-<!-- <?xml version="1.0" encoding="utf-8"?>
+<ItemGroup>
+  <BundleResource Condition="'$(_ResourcePrefix)' != ''" Update="Resources\Default-Portrait%402x.png">
+    <Link>Resources\Default-Portrait%402x.png</Link>
+  </BundleResource>
+  <BundleResource Condition="'$(_ResourcePrefix)' != ''" Update="Resources\Default%402x.png">
+    <Link>Resources\Default%402x.png</Link>
+  </BundleResource>
+  <BundleResource Condition="'$(_ResourcePrefix)' != ''" Update="Resources\Default-568h%402x.png">
+    <Link>Resources\Default-568h%402x.png</Link>
+  </BundleResource>
+</ItemGroup>
+  </Project><!-- <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
