ui tests run, need to add config

--- a/PlantLady/PlantLady.Android/PlantLady.Android.csproj
+++ b/PlantLady/PlantLady.Android/PlantLady.Android.csproj
@@ -16,6 +16,10 @@
     </ProjectReference>
   </ItemGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+	  <EmbedAssembliesIntoApk Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">True</EmbedAssembliesIntoApk>
+	</PropertyGroup>
+
    <ItemGroup>
     <AndroidResource Include="Resources\layout\Tabbar.xml" />
     <AndroidResource Include="Resources\layout\Toolbar.xml" />
