--- a/PlantLady/PlantLady.iOS/PlantLady.iOS.csproj
+++ b/PlantLady/PlantLady.iOS/PlantLady.iOS.csproj
@@ -31,6 +31,9 @@
     <Link>Resources\Default-568h%402x.png</Link>
   </BundleResource>
 </ItemGroup>
+<ItemGroup>
+  <PackageReference Include="Xamarin.TestCloud.Agent" Version="0.23.2" />
+</ItemGroup>
   </Project><!-- <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
